- pts-core: DragonFlyBSD 3.6.0 support improvements
- pts-core: Support using DragonFlyBSD dports package management system for external dependencies
- pts-core: NO_FILE_HASH_CHECKS environment variable also doesn't enforce MD5/SHA256 checks on make-download-cache sub-command
- pts-core: Pass test arguments to pre/interim/post test profile scripts; ESET / Michal Zatloukal patch

Phoronix Test Suite 4.8.5-Sokndal
22 November 2013

- pts-core: Improve formatting of interrupt messages with the (default) concise display mode
- pts-core: Don't remove test install files on installation failures
- pts-core: Allow download-test-files command to use OpenBenchmarking.org IDs
- pts-core: Don't dynamically increase the test run count when dealing with cache shares
- pts-core: Fix for not opening the web-browser in batch mode
- pts-core: Add zypper SUSE help support when not finding PHP
- phodevi: Add support for Nouveau PSTATE parsing on Linux 3.13+
- phodevi: Recognize 'HIS' (Hightech Information System) graphics cards
- phodevi: Recognize 'ZOTAC' graphics cards
- phodevi: Fix redundant monitor model reporting detection on Catalyst
- phodevi: Add support for NVIDIA-Settings GPUUtilization in gpu.usage sensor

Phoronix Test Suite 4.8.4-Sokndal
7 November 2013

- pts-core: Allow web browsers and graphics tests to work on $WAYLAND_DISPLAY when $DISPLAY is not set
- pts-core: Fix for libstdc++ on Gentoo external dependency
- pts-core: Add a ResultScale XML tag option for the results-parser to provide custom ResultScale values depending upon selected parser option
- pts-core: Add a ResultProportion XML tag option for the results-parser to provide custom result proportion values depending upon selected parser option
- pts-core: Add ResultPrecision XML tag to results-parser for setting math precision of decimal points on result (default remains 2)
- pts-core: Add support for writing to $INSTALL_FOOTNOTE during test installations to report custom footnote on generated graphs