@@ -7,6 +7,7 @@ Phoronix Test Suite (Git)
 - pts-core: Support using DragonFlyBSD dports package management system for external dependencies
 - pts-core: NO_FILE_HASH_CHECKS environment variable also doesn't enforce MD5/SHA256 checks on make-download-cache sub-command
 - pts-core: Pass test arguments to pre/interim/post test profile scripts; ESET / Michal Zatloukal patch
+- pts-core: Don't do dynamic test run counts when using system_monitor module
 
 Phoronix Test Suite 4.8.5-Sokndal
 22 November 2013
